// Copyright (c) 2025 A Bit of Help, Inc.

package entity

import (
	"fmt"
	"time"

	domainerrors "github.com/abitofhelp/family-service/core/domain/errors"
	"github.com/abitofhelp/family-service/infrastructure/adapters/errorswrapper"
	"github.com/abitofhelp/family-service/infrastructure/adapters/validationwrapper"
	"github.com/abitofhelp/servicelib/valueobject/identification"
	"github.com/google/uuid"
)

// Status represents the current status of a family
type Status string

// Family status constants
const (
	Single    Status = "SINGLE"
	Married   Status = "MARRIED"
	Divorced  Status = "DIVORCED"
	Widowed   Status = "WIDOWED"
	Abandoned Status = "ABANDONED"
)

// Family is the root aggregate that represents a family unit
type Family struct {
	id       identification.ID
	status   Status
	parents  []*Parent
	children []*Child
}

// generateID generates a UUID for a family
func generateID() string {
	// Generate a UUID v4
	return uuid.New().String()
}

// NewFamily creates a new Family aggregate with validation
func NewFamily(id string, status Status, parents []*Parent, children []*Child) (*Family, error) {
	if id == "" {
		id = generateID()
	}

	// Create ID value object
	idVO, err := identification.NewID(id)
	if err != nil {
		return nil, errorswrapper.NewValidationError("invalid ID: "+err.Error(), "ID", err)
	}

	f := &Family{
		id:       idVO,
		status:   status,
		parents:  parents,
		children: children,
	}

	if err := f.Validate(); err != nil {
		return nil, err
	}

	return f, nil
}

// Validate ensures the Family aggregate is valid
func (f *Family) Validate() error {
	result := validationwrapper.NewValidationResult()

	// ID value object has its own validation, so we don't need to validate it here

	// Validate status
	if f.status == "" {
		result.AddError("is required", "Status")
	}

	// A family must have at least one parent
	if len(f.parents) == 0 {
		result.AddError("family must have at least one parent", "Parents")
	}

	// A family cannot have more than two parents
	if len(f.parents) > 2 {
		result.AddError("family cannot have more than two parents", "Parents")
	}

	// Check for duplicate parents
	seen := make(map[string]bool)
	for i, p := range f.parents {
		if p == nil {
			result.AddError(fmt.Sprintf("parent at index %d is nil", i), "Parents")
			continue
		}

		// Validate each parent
		if err := p.Validate(); err != nil {
			result.AddError(fmt.Sprintf("parent at index %d is invalid: %v", i, err), "Parents")
		}

		// Check for duplicates using a composite key
		key := p.FirstName() + p.LastName() + p.BirthDate().Format("2006-01-02")
		if seen[key] {
			result.AddError("duplicate parent in family", "Parents")
		}
		seen[key] = true

		// Enhanced validation: Validate parent age (minimum 18 years)
		now := time.Now()
		birthDate := p.BirthDate()
		age := now.Year() - birthDate.Year()

		// Adjust age if birthday hasn't occurred yet this year
		if now.Month() < birthDate.Month() || (now.Month() == birthDate.Month() && now.Day() < birthDate.Day()) {
			age--
		}

		if age < 18 {
			result.AddError(fmt.Sprintf("parent at index %d does not meet minimum age requirement (18 years)", i), "Parents")
		}
	}

	// Validate children
	for i, c := range f.children {
		if c == nil {
			result.AddError(fmt.Sprintf("child at index %d is nil", i), "Children")
			continue
		}

		// Validate each child
		if err := c.Validate(); err != nil {
			result.AddError(fmt.Sprintf("child at index %d is invalid: %v", i, err), "Children")
		}

		// Enhanced validation: Validate child's birth date is after parents' birth dates
		childBirthDate := c.BirthDate()
		for j, p := range f.parents {
			parentBirthDate := p.BirthDate()
			if !childBirthDate.After(parentBirthDate) {
				result.AddError(fmt.Sprintf("child at index %d has birth date before parent at index %d", i, j), "Children")
			}
		}

		// Enhanced validation: Validate child's birth date is not in the future
		if childBirthDate.After(time.Now()) {
			result.AddError(fmt.Sprintf("child at index %d has birth date in the future", i), "Children")
		}
	}

	// Validate status transitions based on parents
	if f.status == Married && len(f.parents) != 2 {
		result.AddError("married family must have exactly two parents", "Status")
	}

	if f.status == Single && len(f.parents) > 1 {
		result.AddError("single family cannot have more than one parent", "Status")
	}

	// Enhanced validation: Validate Divorced status
	if f.status == Divorced && len(f.parents) != 1 {
		result.AddError("divorced family must have exactly one parent", "Status")
	}

	// Enhanced validation: Validate Widowed status
	if f.status == Widowed {
		if len(f.parents) != 1 {
			result.AddError("widowed family must have exactly one parent", "Status")
		} else {
			// Check if the remaining parent is deceased
			if f.parents[0].IsDeceased() {
				result.AddError("widowed family cannot have a deceased parent", "Status")
			}
		}
	}

	// Enhanced validation: Validate Abandoned status
	if f.status == Abandoned && len(f.children) == 0 {
		result.AddError("abandoned family must have at least one child", "Status")
	}

	// Enhanced validation: Validate parent-child age gap
	for i, child := range f.children {
		childBirthDate := child.BirthDate()

		for j, parent := range f.parents {
			parentBirthDate := parent.BirthDate()

			// Calculate the age difference in years
			ageGap := childBirthDate.Year() - parentBirthDate.Year()

			// Adjust for partial years
			if childBirthDate.Month() < parentBirthDate.Month() || 
			   (childBirthDate.Month() == parentBirthDate.Month() && childBirthDate.Day() < parentBirthDate.Day()) {
				ageGap--
			}

			// Minimum 12 years between parent and child
			if ageGap < 12 {
				result.AddError(fmt.Sprintf("child at index %d has too small age gap with parent at index %d", i, j), "Children")
			}
		}
	}

	return result.Error()
}

// ID returns the family's ID
func (f *Family) ID() string {
	return string(f.id)
}

// Status returns the family's status
func (f *Family) Status() Status {
	return f.status
}

// Parents returns a copy of the family's parents
func (f *Family) Parents() []*Parent {
	result := make([]*Parent, len(f.parents))
	copy(result, f.parents)
	return result
}

// Children returns a copy of the family's children
func (f *Family) Children() []*Child {
	result := make([]*Child, len(f.children))
	copy(result, f.children)
	return result
}

// CountParents returns the number of parents in the family
func (f *Family) CountParents() int {
	return len(f.parents)
}

// CountChildren returns the number of children in the family
func (f *Family) CountChildren() int {
	return len(f.children)
}

// AddParent adds a parent to the family
func (f *Family) AddParent(p *Parent) error {
	if p == nil {
		return errorswrapper.NewValidationError("parent cannot be nil", "Parent", nil)
	}

	if len(f.parents) >= 2 {
		return domainerrors.NewFamilyTooManyParentsError("family cannot have more than two parents", nil)
	}

	// Check for duplicate parent
	for _, existingParent := range f.parents {
		if existingParent.Equals(p) {
			return domainerrors.NewFamilyParentExistsError("parent already exists in family", nil)
		}

		// Check for duplicate based on name and birthdate
		if existingParent.FirstName() == p.FirstName() &&
			existingParent.LastName() == p.LastName() &&
			existingParent.BirthDate().Equal(p.BirthDate()) {
			return domainerrors.NewFamilyParentDuplicateError("parent with same name and birthdate already exists in family", nil)
		}
	}

	f.parents = append(f.parents, p)

	// We don't automatically update the status when adding a parent
	// This allows the caller to control the family status

	return nil
}

// AddChild adds a child to the family
func (f *Family) AddChild(c *Child) error {
	if c == nil {
		return errorswrapper.NewValidationError("child cannot be nil", "Child", nil)
	}

	// Check for duplicate child
	for _, existingChild := range f.children {
		if existingChild.Equals(c) {
			return domainerrors.NewFamilyChildExistsError("child already exists in family", nil)
		}
	}

	f.children = append(f.children, c)
	return nil
}

// RemoveChild removes a child from the family
func (f *Family) RemoveChild(childID string) error {
	for i, c := range f.children {
		if c.ID() == childID {
			// Remove child at index i
			f.children = append(f.children[:i], f.children[i+1:]...)
			return nil
		}
	}
	return errorswrapper.NewNotFoundError("Child", childID, nil)
}

// RemoveParent removes a parent from the family
func (f *Family) RemoveParent(parentID string) error {
	if len(f.parents) <= 1 {
		return domainerrors.NewFamilyCannotRemoveLastParentError("cannot remove the only parent from a family", nil)
	}

	for i, p := range f.parents {
		if p.ID() == parentID {
			// Remove parent at index i
			f.parents = append(f.parents[:i], f.parents[i+1:]...)

			// Update status if needed
			if len(f.parents) == 1 && f.status == Married {
				f.status = Single
			}

			return nil
		}
	}
	return errorswrapper.NewNotFoundError("Parent", parentID, nil)
}

// MarkParentDeceased marks a parent as deceased and updates family status if needed
func (f *Family) MarkParentDeceased(parentID string, deathDate time.Time) error {
	var foundParent *Parent

	for _, p := range f.parents {
		if p.ID() == parentID {
			foundParent = p
			break
		}
	}

	if foundParent == nil {
		return errorswrapper.NewNotFoundError("Parent", parentID, nil)
	}

	if err := foundParent.MarkDeceased(deathDate); err != nil {
		return err
	}

	// If this was a married family with two parents, and one died, update status
	if f.status == Married && len(f.parents) == 2 {
		f.status = Widowed
	}

	return nil
}

// Divorce handles the divorce process, creating a new family for the remaining parent
// The original family keeps the custodial parent and children
func (f *Family) Divorce(custodialParentID string) (*Family, error) {
	if f.status != Married {
		return nil, domainerrors.NewFamilyNotMarriedError("only married families can divorce", nil)
	}

	if len(f.parents) != 2 {
		return nil, domainerrors.NewFamilyDivorceRequiresTwoParentsError("divorce requires exactly two parents", nil)
	}

	var custodialParent *Parent
	var remainingParent *Parent

	for _, p := range f.parents {
		if p.ID() == custodialParentID {
			custodialParent = p
		} else {
			remainingParent = p
		}
	}

	if custodialParent == nil {
		return nil, errorswrapper.NewNotFoundError("Parent", custodialParentID, nil)
	}

	// Create a new family for the remaining parent (this will get a new ID)
	// The original family ID will stay with the custodial parent and children
	remainingFamily, err := NewFamily(
		"", // Empty ID will cause a new ID to be generated
		Divorced,
		[]*Parent{remainingParent},
		[]*Child{}, // No children with the remaining parent
	)

	if err != nil {
		return nil, domainerrors.NewFamilyCreateFailedError("failed to create new family for remaining parent", err)
	}

	// Update the original family to keep only the custodial parent
	f.parents = []*Parent{custodialParent}
	f.status = Divorced

	// Return the new family with the remaining parent
	// The original family (with custodial parent and children) is modified in place
	return remainingFamily, nil
}

// ToDTO converts the Family aggregate to a data transfer object for external use
func (f *Family) ToDTO() FamilyDTO {
	parentDTOs := make([]ParentDTO, len(f.parents))
	for i, p := range f.parents {
		parentDTOs[i] = p.ToDTO()
	}

	childDTOs := make([]ChildDTO, len(f.children))
	for i, c := range f.children {
		childDTOs[i] = c.ToDTO()
	}

	return FamilyDTO{
		ID:            string(f.id),
		Status:        string(f.status),
		Parents:       parentDTOs,
		Children:      childDTOs,
		ParentCount:   f.CountParents(),
		ChildrenCount: f.CountChildren(),
	}
}

// FamilyDTO is a data transfer object for the Family aggregate
type FamilyDTO struct {
	ID            string
	Status        string
	Parents       []ParentDTO
	Children      []ChildDTO
	ParentCount   int
	ChildrenCount int
}

// FamilyFromDTO creates a Family aggregate from a data transfer object
func FamilyFromDTO(dto FamilyDTO) (*Family, error) {
	parents := make([]*Parent, len(dto.Parents))
	for i, pDTO := range dto.Parents {
		p, err := ParentFromDTO(pDTO)
		if err != nil {
			return nil, err
		}
		parents[i] = p
	}

	children := make([]*Child, len(dto.Children))
	for i, cDTO := range dto.Children {
		c, err := ChildFromDTO(cDTO)
		if err != nil {
			return nil, err
		}
		children[i] = c
	}

	return NewFamily(dto.ID, Status(dto.Status), parents, children)
}
